# rustle

./: .bazelrc  .gitignore  .prettierrc  BUILD  Cargo.toml  README.md  WORKSPACE  package.json  tsconfig.root.json  turbo.json
libs/idl/: README.md  buf.gen.yaml  package.json  tsconfig.json
libs/idl/proto/auth/v1/: google.proto
libs/prepare/: README.md  package.json
libs/prepare/rustle_docker/: docker-compose.local.yml
libs/prepare/scripts/: prepare.sh
scripts/: create_new_repo.mjs  dockerize.mjs
scripts/lib/: cli.mjs  directory.mjs  logger.mjs
services/api/: Cargo.toml  Dockerfile  README.md  package.json  rust-toolchain.toml
services/api/src/: main.rs  router.rs
services/webclient/: .gitignore  README.md  package.json  svelte.config.js  vite.config.ts
services/webclient/.storybook/: main.ts  preview.ts
services/webclient/messages/: ko.json
services/webclient/project.inlang/: project_id
services/webclient/src/: App.css  App.tsx  app.html
services/webclient/src/components/common/: Text.stories.svelte  Text.svelte  TopNav.svelte  navbar.svelte
services/webclient/src/routes/: +layout.svelte  +page.svelte
services/webclient/src/routes/demo/paraglide/: +page.svelte
services/webclient/src/routes/login/: +layout.svelte  +page.svelte
services/webclient/src/types/: Auth.d.ts
services/webclient/src/utils/: env.ts
services/ws_gateway/: README.md  package.json  tsconfig.json
services/ws_gateway/src/: main.ts
