[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
debug = false
strip = true
opt-level = 3
lto = true
codegen-units = 1
