[package]
name = "api"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = "0.8.1"
charybdis = "0.7.14"
ctrlc = "3.4.5"
scylla = "1.0.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

